[gd_scene load_steps=5 format=2]

[ext_resource path="res://game_viewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://game_model.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_controller.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="game_viewer" parent="." instance=ExtResource( 1 )]

[node name="game_model" parent="." instance=ExtResource( 3 )]
visible = false

[node name="game_controller" parent="." instance=ExtResource( 4 )]
visible = false
